# Image2Beercaps

./: .eslintrc.js  README.md  TODO.md  babel.config.js  index.html  package-lock.json  package.json  robots.txt  server.js  sitemap.xml  wrangler.jsonc
.github/: funding.yml
.github/workflows/: codeql-analysis.yml
css/: styles.css
js/: app.js  colorUtils.js  gridGenerator.js  scanner.js  storage.js  wasmLoader.js
src/: App.vue  main.ts
src/assets/: defaultSaveFile.json
src/components/: Page.vue
src/utils/: drawResultImage.ts  getAverageColor.ts  index.ts
wasm/: Cargo.toml
wasm/.cargo/: config.toml
wasm/pkg/: hungarian_wasm.d.ts  hungarian_wasm.js  hungarian_wasm_bg.wasm  hungarian_wasm_bg.wasm.d.ts
wasm/pkg/snippets/wasm-bindgen-rayon-38edf6e439f6d70d/src/: workerHelpers.js
wasm/src/: lib.rs
