[package]
name = "hungarian-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Beercap Mosaic Generator"]
description = "Hungarian algorithm for optimal assignment, compiled to WebAssembly"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
rayon = "1.10"
wasm-bindgen-rayon = "1.2"

[profile.release]
opt-level = 3
lto = true
